# zfs

./: ADAM-BUILD  ADAM-BUILD-debug  M  autogen.sh
.github/workflows/: checkstyle.yaml  tests.yml
cmd/: ztest.c
cmd/ztest/: ztest.c
config/: kernel.m4
include/os/freebsd/: Makefile.am
include/os/freebsd/spl/sys/: debug.h
include/os/freebsd/zfs/sys/: zfs_znode_impl.h
include/os/linux/: Makefile.am
include/os/linux/kernel/linux/: kmap_compat.h
include/os/linux/spl/sys/: debug.h  strings.h
include/os/linux/zfs/sys/: zfs_znode_impl.h
include/sys/: arc.h  dmu_objset.h  zfs_context.h  zil.h  zio_compress.h  zvol_impl.h
include/sys/fs/: zfs.h
lib/libzfs/: libzfs.abi
lib/libzpool/: Makefile.am
lib/libzstd/: Makefile.am
man/man4/: zfs.4
man/man5/: zfs-module-parameters.5
module/: Kbuild.in  Makefile.bsd
module/os/freebsd/zfs/: arc_os.c  zfs_vnops_os.c  zfs_znode.c  zvol_os.c
module/os/linux/spl/: spl-kmem-cache.c  spl-kmem.c
module/os/linux/zfs/: abd_os.c  arc_os.c  zfs_ctldir.c  zfs_dir.c  zfs_vfsops.c  zfs_vnops_os.c  zfs_znode.c  zpl_file.c  zpl_inode.c  zvol_os.c
module/zcommon/: zfs_prop.c
module/zfs/: Makefile.in  arc.c  dmu.c  dmu_objset.c  dmu_traverse.c  lz4legacy.c  spa.c  vdev.c  zfs_ioctl.c  zfs_log.c  zfs_vnops.c  zil.c  zio.c  zio_compress.c  zvol.c
module/zstd/: Makefile.in  zfs_zstd.c
module/zstd/include/: string.h
module/zstd/lib/: zstd.c
module/zstd/lib/common/: xxhash.h  zstd_common.c  zstd_internal.h
tests/runfiles/: common.run  linux.run
tests/zfs-tests/cmd/: manipulate_user_buffer.c  stride_dd.c
tests/zfs-tests/tests/: Makefile.am
tests/zfs-tests/tests/functional/direct/: dio_write_verify.ksh
tests/zfs-tests/tests/functional/l2arc/: l2arc_l2miss_pos.ksh
